Prevent .chattime from overflowing info messages and then some

--- a/src/chathelper.styl
+++ b/src/chathelper.styl
@@ -1,3 +1,14 @@
+.infomsg
+.chatmsg
+    position relative
+    overflow hidden
+
+    .chattime
+        position absolute
+        top 0
+        right 0
+        float none
+
 .jetstuff-ignoreduser
     position relative
 
